global data fetching successful

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RF-EMF data analyzer</string>
     <string name="error_no_sensor">appropriate sensors were not found in the device</string>
+    <string name="data_fetching">fetching data from the internet....</string>
 </resources>
