both local and global data fetched successfully

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">RF-EMF data analyzer</string>
     <string name="error_no_sensor">appropriate sensors were not found in the device</string>
     <string name="data_fetching">fetching data from the internet....</string>
+    <string name="empty_row">Sorry! some error occured</string>
+    <string name="fetch_failed_error">Sorry! server error</string>
 </resources>
